ingress-old.yaml
# Ceci est une configuration Ingress pour Kubernetes qui définit comment le trafic externe est acheminé vers les services internes du cluster.
apiVersion: networking.k8s.io/v1 # Cette version de l'API est utilisée pour une configuration stable de l'Ingress
kind: Ingress
metadata:
  name: aws-ingress
  # Pour spécifier un espace de noms, décommentez la ligne suivante :
  # namespace: argocd
  annotations:
    # Utilisation d'un Application Load Balancer d'AWS
    #kubernetes.io/ingress.class: alb
    # Configuration pour un ALB accessible depuis Internet
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Cible les pods directement par leur IP
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    # Règle par défaut pour la racine URL
    - http:
        paths:
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       # Nom du service pour la racine URL
          #       name: angular-service
          #       port:
          #         # Port du service pour la racine URL
          #         number: 80
          # Règle pour le chemin /restaurant
          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 9091
          # Règle pour le chemin /foodCatalogue
          - path: /foodCatalogue
            pathType: Prefix
            backend:
              service:
                name: foodcatalogue-service
                port:
                  number: 9092
          # Règle pour le chemin /order
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9094
          # Règle pour le chemin /user
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9093
